1) corrected vosk for src_encoding=l16, 2) sr_engine_comparison updated to support vosk

--- a/sr_engine_comparison/index.html
+++ b/sr_engine_comparison/index.html
@@ -307,7 +307,7 @@
       var socket = io()
 
       var data = {
-        fields: ['google', 'olaris', 'olaris_v2', 'julius'],
+        fields: ['google', 'olaris', 'olaris_v2', 'vosk', 'julius'],
         items: [],
         state: 'idle',
       }
